# TP-TLA

./: .clang-format  .gitignore  CMakeLists.txt  CORRECCIONES.md  LICENSE  README.md  STRUCTURE.md  TODO.md  bison-actions-backupp.c  compile_compiler.sh  idea-parte2.txt  idea.txt  notas_santi.md
src/: CMakeLists.txt  main.c
src/backend/: ast.c  ast.h  code-generator.c  code-generator.h  code_generator.c  code_generator.h  error.c  error.h  logger.c  logger.h  mem_management.c  mem_management.h  node.h  shared.h  symbols.c  symbols.h
src/backend/generator/: code-generator.c  code-generator.h  free_function_call.c  free_function_call.h  internal_functions.c  internal_functions.h  standard_functions.c  standard_functions.h
src/frontend/lexical-analysis/: flex-actions.c  flex-actions.h  flex-patterns.l
src/frontend/syntactic-analysis/: bison-actions.c  bison-actions.h  bison-actions2.c  bison-actions2.h  bison-grammar.y  node.h  node2.h
test/: path.csv  path2.txt  r30  r30.texler  r31  r31.texler  r310  r310.texler  r311.texler  r312  r312.texler  r313  r314  r314.texler  r315.texler  r32  r32.texler  r33  r33.texler  r34  r34.texler  r35.texler  r36  r36.texler  r37  r37.texler  r38.texler  r39  r39.texler  runTest.sh  test_expected_r31.txt  test_expected_r310.txt  test_expected_r311.txt  test_expected_r312.txt  test_expected_r315.txt  test_expected_r33.txt  test_expected_r34.txt  test_expected_r35.txt  test_expected_r36.txt  test_expected_r37.txt  (+4 more)
test/c-version/: path_columns.txt  path_r37.txt  r30.c  r31.c  r310.c  r311.c  r32.c  r33.c  r34.c  r35.c  r36.c  r37.c  r38.c  r39.c
test/c-version/r310_folder/: path.txt  path1.txt  path2.txt  path_r36.txt
test/r310_folder/: path.txt  path1.txt  path2.txt  path3.txt  path_r36.txt  path_r37.txt
utils/: texler.sh
